# oxidetp

./: Cargo.toml  README.md  justfile
examples/: totp_chrono.rs
examples/totp_chrono/: Cargo.toml
examples/totp_time/: Cargo.toml
examples/totp_time/src/: main.rs
src/: hotp.rs  lib.rs  totp.rs  uri_helper.rs
