[package]
name = "oxidetp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.5.0"
ring = "0.17.8"
thiserror = "1.0.57"
url = "2.5.0"

[dev-dependencies]
rstest = "0.18.2"
pretty_assertions = "1.4.0"
