[package]
name = "oxidetp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.5.0"
hmac = "0.12.1"
sha1 = "0.10.6"
sha2 = "0.10.8"
thiserror = "1.0.57"
url = "2.5.0"

[dev-dependencies]
rstest = "0.18.2"
pretty_assertions = "1.4.0"
anyhow = "1.0.80"
time = "0.3.34"
chrono = "0.4.35"
