[package]
name = "oxidetp"
version = "2.0.0"
edition = "2021"

[features]
use_aws_lc = [ "aws-lc-rs" ]
use_ring = [ "ring" ]

default = [ "use_aws_lc" ]

[dependencies]
data-encoding = "2.5.0"
aws-lc-rs = { version = "1.13.3", optional = true }
ring = { version = "0.17.14", optional = true }
thiserror = "2.0.16"
url = "2.5.0"

[dev-dependencies]
rstest = "0.26.1"
pretty_assertions = "1.4.0"

[workspace]
members = ["examples/*"]
